# rnes

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/: palette.pal
src/: cartridge.rs  cpu.rs  main.rs  mapper.rs  memory.rs  ppu.rs
src/mapper/: bandai.rs  nrom.rs
