[package]
name = "rboy"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
log = "0.4.19"
notan = { version = "0.9.5", features = ["egui"] }
serde = { version = "1.0.164", optional = true }
serde_json = { version = "1.0.64", optional = true }

[features]
tom_harte_tests = ["dep:serde", "dep:serde_json"]
